Add "pack random trip" function
