# service/openapi/api.yaml
@@ -106,6 +106,48 @@ paths:
                 items:
                   type: object
 
+  /trips/pack:
+    post:
+      tags: [ trips ]
+      summary: Pack a trip.
+      requestBody:
+        description: Filter parameters.
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                budget:
+                  type: array
+                  items:
+                    type: integer
+                date:
+                  type: string
+                categories:
+                  type: array
+                  items:
+                    type: string
+                tags:
+                  type: array
+                  items:
+                    type: string
+
+            example:
+              budget: [2000, 5000]
+              date: "2021-06-19"
+              categories: ["mountains", "entertainments"]
+
+      responses:
+        '200':
+          description: Ok.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+
   /users/all:
     get:
       tags: [ users ]
@@ -121,23 +163,3 @@ paths:
                 items:
                   type: object
 
-  /hello/hey:
-    get:
-      tags: [ hello ]
-      summary: Say hello.
-      parameters:
-        - name: username
-          in: query
-          required: false
-          schema:
-            type: string
-          example: "Steve"
-
-      responses:
-        '200':
-          description: Ok.
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: Hello Steve!
