# service/server.py
@@ -1,10 +1,9 @@
 from flask import Flask
 
-from service.apis.hello import hello
 from service.apis.locations import locations
 from service.apis.users import users
 from service.apis.categories import categories
-
+from service.apis.trips import trips
 
 api_prefix = "/api"
 docs_folder = "openapi"
@@ -13,7 +12,7 @@ docs_path = f"{api_prefix}/{docs_folder}"
 app = Flask(__name__, static_folder=docs_folder, static_url_path=docs_path)
 
 blueprints_to_add = [
-    hello, locations, users, categories
+    locations, users, categories, trips
 ]
 for blueprint in blueprints_to_add:
     url_prefix = f"{api_prefix}/{blueprint.name}"
